Modify nav-right ensure text has no wrap

--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -28,6 +28,7 @@ nav {
   width: 90%;
   margin-top: 30px;
 }
+
 .nav-right {
   display: flex;
   justify-content: space-between;
@@ -37,6 +38,9 @@ nav {
   margin-top: 30px;
   padding-right: 10px;
   font-size: 1.3em;
+}
+.nav-right p {
+  white-space: nowrap;
 }
 
 .btn-cart:focus {
